# pqloop

./: .gitignore  LICENSE  README.md  pyproject.toml  sample_command.txt
.github/workflows/: ci.yml
docs/: quadra_parameter_notes.md
pqloop/: __init__.py  cli.py  encoders.py  ffmpeg.py  ladder.py  media.py  optimizer.py  package.py  presets.py  rate.py  runner.py  segment.py  stats.py  util.py  vmaf.py
presets/: deint-test.json  livetest.json  nvenc-test.json  scaletest.json  smoke.json  soccer_1080p50.json  soccer_1080p50_3500.json  soccer_540p50.json  soccer_720p50.json  sports.json  sports_1080p.json
tests/: test_cli.py  test_core.py  test_encoders.py  test_ffmpeg.py  test_integration_ffmpeg.py  test_ladder.py  test_media.py  test_misc.py  test_optimizer.py  test_package.py  test_pipeline.py  test_rate.py  test_runner.py  test_segment.py  test_vmaf.py
